gallery in progress

--- a/css/main.css
+++ b/css/main.css
@@ -11,9 +11,13 @@ html {
     font-size: 1em;
     line-height: 1em;
 }
+body{
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
 h1 {
     font-size: 1.5em;
-    font-family: 'OCRAStd', Arial, sans-serif;
+    font-family: 'slkscr', Arial, sans-serif;
 }
 h3 {
     line-height: 1em; 
@@ -24,7 +28,6 @@ p {
     line-height: 1.2em;
 }
 .section {
-    width: 1000px;
     margin: 0 auto;
 }
 /*first page*/
@@ -32,29 +35,23 @@ p {
     background-color: #EDEDED;
 }
 #menu {
+    position: fixed;
     font-family: 'slkscr';
-    font-weight: 100;
-    top: 0;
-    left:0;
-    height: 50px;
     z-index: 70;
     width: 100%;
     padding: 0;
     margin: 0;
     padding: 1em 1em 0em 0em;
-    margin-right: 20px;
 }
 ul {
     list-style: none;
 }
 #menu li {
-    display: flex;
     font-size: 1.5em;
     text-transform: uppercase;
-    margin: 10px;
+    padding: 10px 0px 10px 10px;
     list-style-type: none;
 }
-
 #menu li a {
     text-decoration: none;
     color: #BFBDBD;
@@ -64,17 +61,35 @@ ul {
 }
 #menu li.active a {
     color: #330689;
-    text-decoration: underline;
 }
+.selected {
+    height: 6px;
+    margin-bottom: 4px;
+    background-color: #330689;
+}
+.tab1 {
+    width: 68px;
+}
+.tab2 {
+    width: 134px;
+}
+.tab3 {
+    width: 90px;
+}
+.tab4 {    
+    width: 115px;
+}
+
 
 
 /* rysunek css*/
 .illustration {
     display: flex;
     justify-content: space-around;
+    padding-bottom: 440px;
 }
 .things {
-    top:130px;
+    top:250px;
     position: relative;
 }
 .circle {
@@ -88,10 +103,9 @@ ul {
     -moz-border-radius: 620px;
     -webkit-border-radius: 620px;
     border-radius: 620px;
-    z-index: -20;
+    z-index: 0;
 }
 .circleBG {
-    position: absolute;
     width: 620px;
     height: 620px;
     background: #E5E5E5;
@@ -405,6 +419,157 @@ ul {
     border-radius: 10px;
     z-index: 30;
 }
+.loop {
+    position: relative;
+    top: -846px;
+    left: -93px;
+}
+.loopCircle {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    border: 7px solid black;
+    -moz-border-radius: 200px;
+    -webkit-border-radius: 200px;
+    border-radius: 200px;
+    z-index: 40;
+}
+.loopHandle {
+    top: 199px;
+    left: 157px;
+    width:7px;
+    height: 65px;
+    background-color: black;
+    position: absolute;
+    transform:rotate(-25deg); 
+    -webkit-transform:rotate(-25deg); 
+    -moz-transform:rotate(-25deg); 
+    -o-transform:rotate(-25deg);
+    z-index: 40;
+}
+.loop2 {
+    position: relative;
+    top: -421px;
+    left: 534px;
+}
+.loopCircle2 {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    border: 7px solid black;
+    -moz-border-radius: 200px;
+    -webkit-border-radius: 200px;
+    border-radius: 200px;
+    z-index: 40;
+}
+.loopHandle2 {
+    top: 205px;
+    left: 59px;
+    width:7px;
+    height: 80px;
+    background-color: black;
+    position: absolute;
+    transform:rotate(31deg); 
+    -webkit-transform:rotate(31deg); 
+    -moz-transform:rotate(31deg); 
+    -o-transform:rotate(31deg);
+    z-index: 40;
+}
+.loop3 {
+    position: relative;
+    top: -790px;
+    left: 390px;
+}
+.loopCircle3 {
+    position: absolute;
+    width: 230px;
+    height: 230px;
+    border: 7px solid black;
+    -moz-border-radius: 230px;
+    -webkit-border-radius: 230px;
+    border-radius: 230px;
+    z-index: 40;
+}
+.loopHandle3 {
+    top: 226px;
+    left: 59px;
+    width:7px;
+    height: 66px;
+    background-color: black;
+    position: absolute;
+    transform:rotate(21deg); 
+    -webkit-transform:rotate(21deg); 
+    -moz-transform:rotate(21deg); 
+    -o-transform:rotate(21deg);
+    z-index: 40;
+}
+/*gallery*/
+.gallery ul {
+    list-style: none;
+}
+.gallery li {
+    display: inline-block;
+}
+.galleryImg {
+    margin: 0 auto;
+}
+.gallery li img {
+    width: 300px;
+    height: auto;
+}
+.fullScreen {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 94px;
+    z-index: 100;
+    background:rgba(255,255,255,0.7);
+}
+.fullScreen .close {
+    -moz-border-radius: 230px;
+    -webkit-border-radius: 230px;
+    border-radius: 230px;
+    font-family: 'slkscr';
+    font-size: 1.5em;
+    border: 7px solid black;
+    background-color: white;
+    width:200px;
+    height:50px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 100;
+}
+.next {
+    -moz-border-radius: 230px;
+    -webkit-border-radius: 230px;
+    border-radius: 230px;
+    font-family: 'slkscr';
+    font-size: 1.5em;
+    border: 7px solid black;
+    background-color: white;
+    width:150px;
+    height:40px;
+    position: absolute;
+    z-index: 100;
+    right:300px;
+}
+.prev {
+    -moz-border-radius: 230px;
+    -webkit-border-radius: 230px;
+    border-radius: 230px;
+    font-family: 'slkscr';
+    font-size: 1.5em;
+    border: 7px solid black;
+    background-color: white;
+    width:150px;
+    height:40px;
+    position: absolute;
+    z-index: 100;  
+
+}
+
 
 
 
